# ufes_so2021_project1

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: main.c
src/lib/: handlers.c  handlers.h  lib.c  lib.h  lib_fmt.c  new_handlers.c  new_handlers.h  new_lib.c  new_lib.h
src/lib/util/linked_list/: linked_list.c  linked_list.h
src/lib/util/string_util/: string_util.c  string_util.h
src/lib/util/vec/: vec.c  vec.h
src/lib/vec/: vec.c  vec.h
